--- a/index.html
+++ b/index.html
@@ -179,58 +179,58 @@
                     </p>
                 </div>
             </div>
-            <!-- <div class="testimonial-item row align-items-center">
+            <div class="testimonial-item row align-items-center">
                 <div class="testimonial-img">
-                    <img src="./images/testimonial-2.jpg" alt="Testimonial image">
+                    <!-- <img src="./images/testimonial-2.jpg" alt="Testimonial image"> -->
                 </div>
                 <div class="testimonial-text">
-                    <h3>Person-2</h3>
-                    <h4>Designation</h4>
+                    <h3>Sanjit Poudel</h3>
+                    <h4>Smart Karobar</h4>
                     <p>
-                        Testimonial
+                        I am satisfied with the service provided by global cyberlife for the maintainance of my project.its been headache not being able to manage the project as we did not have any developer.but with the help of global cyberlife it has been great help.
 
                     </p>
                 </div>
-            </div> -->
-            <!-- <div class="testimonial-item row align-items-center">
+            </div>
+            <div class="testimonial-item row align-items-center">
                 <div class="testimonial-img">
-                    <img src="./images/testimonial-3.jpg" alt="Testimonial image">
+                    <!-- <img src="./images/testimonial-3.jpg" alt="Testimonial image"> -->
                 </div>
                 <div class="testimonial-text">
-                    <h3>Person-3</h3>
-                    <h4>Designation</h4>
+                    <h3>Bibek Adhikari</h3>
+                    <h4>blue morphic interior design</h4>
                     <p>
-                        Testimonial
+                        we are glad the we have contacted to build our website from the global cyberlife.we got the best product and best rate for the website in the market.
 
                     </p>
                 </div>
-            </div> -->
-            <!-- <div class="testimonial-item row align-items-center">
+            </div>
+            <div class="testimonial-item row align-items-center">
                 <div class="testimonial-img">
-                    <img src="./images/testimonial-4.jpg" alt="Testimonial image">
+                    <!-- <img src="./images/testimonial-4.jpg" alt="Testimonial image"> -->
                 </div>
                 <div class="testimonial-text">
-                    <h3>Person-4</h3>
-                    <h4>Designation</h4>
+                    <h3>Sachin Thapa</h3>
+                    <h4>Civil Engineer</h4>
                     <p>
-                        Testimonial
+                        I wanted to build a portfolio website but i dod not want to spend more but wanted nice design .and thanks to global cyberlife it has been great working together and i finally got my portfolio.
 
                     </p>
                 </div>
-            </div> -->
-            <!-- <div class="testimonial-item row align-items-center">
+            </div>
+            <div class="testimonial-item row align-items-center">
                 <div class="testimonial-img">
-                    <img src="./images/testimonial-5.jpg" alt="Testimonial image">
+                    <!-- <img src="./images/testimonial-5.jpg" alt="Testimonial image"> -->
                 </div>
                 <div class="testimonial-text">
-                    <h3>Person-5</h3>
-                    <h4>Designation</h4>
+                    <h3>Prabin siwakoti</h3>
+                    <h4>Ingo/ngo support</h4>
                     <p>
-                        Testimonial
+                        we were in need of website for our ngo and we found cyberlife as our technology patner and they have given us service veryfast and very good.we have been ale to integrate very crucial feature as well.
 
                     </p>
                 </div>
-            </div> -->
+            </div>
         </div>
     </div>
 </div>
