--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <div class="owl-carousel testimonials-carousel">
             <div class="testimonial-item row align-items-center">
                 <div class="testimonial-img">
-                    <!-- <img src="./images/testimonial-1.jpg" alt="Testimonial image"> -->
+                    <img src="./images/testimonial-1.jpg" alt="Testimonial image">
                 </div>
                 <div class="testimonial-text">
                     <h3>Damodar Shrestha</h3>
@@ -181,7 +181,7 @@
             </div>
             <div class="testimonial-item row align-items-center">
                 <div class="testimonial-img">
-                    <!-- <img src="./images/testimonial-2.jpg" alt="Testimonial image"> -->
+                    <img src="./images/testimonial-2.jpg" alt="Testimonial image">
                 </div>
                 <div class="testimonial-text">
                     <h3>Sanjit Poudel</h3>
@@ -194,7 +194,7 @@
             </div>
             <div class="testimonial-item row align-items-center">
                 <div class="testimonial-img">
-                    <!-- <img src="./images/testimonial-3.jpg" alt="Testimonial image"> -->
+                    <img src="./images/testimonial-3.jpg" alt="Testimonial image">
                 </div>
                 <div class="testimonial-text">
                     <h3>Bibek Adhikari</h3>
@@ -207,7 +207,7 @@
             </div>
             <div class="testimonial-item row align-items-center">
                 <div class="testimonial-img">
-                    <!-- <img src="./images/testimonial-4.jpg" alt="Testimonial image"> -->
+                    <img src="./images/testimonial-4.jpg" alt="Testimonial image">
                 </div>
                 <div class="testimonial-text">
                     <h3>Sachin Thapa</h3>
@@ -220,7 +220,7 @@
             </div>
             <div class="testimonial-item row align-items-center">
                 <div class="testimonial-img">
-                    <!-- <img src="./images/testimonial-5.jpg" alt="Testimonial image"> -->
+                    <img src="./images/testimonial-5.jpg" alt="Testimonial image">
                 </div>
                 <div class="testimonial-text">
                     <h3>Prabin siwakoti</h3>
@@ -244,14 +244,14 @@
             </p>
         </div>
         <div class="owl-carousel clients-carousel">
+            <!-- <img src="./images/image.png" alt="Client Logo">
             <img src="./images/image.png" alt="Client Logo">
             <img src="./images/image.png" alt="Client Logo">
             <img src="./images/image.png" alt="Client Logo">
             <img src="./images/image.png" alt="Client Logo">
             <img src="./images/image.png" alt="Client Logo">
             <img src="./images/image.png" alt="Client Logo">
-            <img src="./images/image.png" alt="Client Logo">
-            <img src="./images/image.png" alt="Client Logo">
+            <img src="./images/image.png" alt="Client Logo"> -->
         </div>
     </div>
 </div>
